--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <hr />
         <h1> Total </h1>
 
+        <p id="total"> <i>it will show up here</i> </p>
+        
+
 
         <script src="sortthreenumbers.js"></script>
     </body>
